# icu_sync

./: .gitignore  AGENTS.md  DlgPatientDetail.py  DlgSetting.py  ICU-Sync.spec  Main_logic.py  Main_ui 2.py  Main_ui.py  README.md  app_locale_lib.py  app_single_instance_lib.py  app_startup_lib.py  database-schema.md  hosxp_lib.py  icucons_schema_lib.py  icuconsult_api_lib.py  path  pyproject.toml  setting_lib.py  start.py
docs/: external-client-icucon-api.md  hosxp_credential.md  icucons_api_endpoint.md  spec.md
